<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>0.0.1</version>
  <description>Custom velocity PID controller</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
